使い勝手を向上させるための修正
・DOMが変更されるたびに画像リストを再作成するように変更
・他のスクリプトと競合しない様にスクリプト本体を名前空間でまとめた
・gitignore追加

--- a/src/css/imageScaler.css
+++ b/src/css/imageScaler.css
@@ -1,10 +1,11 @@
 /* scale-imgを任意のクラス名に変更 */
 .scale-img img {
+    /* visibleにしないと画像が表示されなかった */
     visibility: hidden;
 }
 
 /* 画像の拡大 */
-#overlay{
+#scale-image-overlay-window{
     display: flex;
     background-color: rgba(0, 0, 0, 0.5);
     height: 100%;
@@ -18,7 +19,7 @@
     margin-top: 0;
 }
 
-#overlay.show{
+#scale-image-overlay-window.show{
     opacity: 1;
 }
 
